--- a/src/main/resources/templates/pizzas.html
+++ b/src/main/resources/templates/pizzas.html
@@ -22,7 +22,7 @@
 								</button>
 							</form>
 						</div>
-						<div class="col-4 mx-auto">
+						<div class="col-4 mx-auto" sec:authorize="hasAuthority('ADMIN')">
 							<a th:href="@{/pizzas/create}" class="btn btn-success">
 								<span><i class="fa-solid fa-plus"></i></span>
 								<span>New Pizza</span>
@@ -57,10 +57,10 @@
 							<a class="btn btn-primary" th:href="@{/pizzas/{id}(id=${pizza.id})}">
 								<i class="fa-solid fa-eye"></i>
 							</a>
-							<a class="btn btn-warning" th:href="@{/pizzas/edit/{id}(id=${pizza.id})}">
+							<a sec:authorize="hasAuthority('ADMIN')" class="btn btn-warning" th:href="@{/pizzas/edit/{id}(id=${pizza.id})}">
 								<i class="fa-solid fa-pen"></i>
 							</a>
-							<form th:action="@{/pizzas/trash/{id}(id=${pizza.id})}" method="POST" class="d-inline-block">
+							<form sec:authorize="hasAuthority('ADMIN')" th:action="@{/pizzas/trash/{id}(id=${pizza.id})}" method="POST" class="d-inline-block">
 								<button type="submit" class="btn btn-danger">
 									<i class="fa-solid fa-trash-can"></i>
 								</button>
@@ -70,6 +70,24 @@
 					</tbody>
 				</table>
 		</div>
+		<footer class="text-center mt-5">
+			<div th:if="${username} != 'Null'">
+				<div class="user">
+					<span class="fw-bold">User: </span>
+					<span>[[${username}]]</span>
+				</div>
+				<div class="role">
+					<span class="fw-bold">Role: </span>
+					<span>[[${role}]]</span>
+				</div>
+			</div>
+			<div th:unless="${username} != 'Null'" >
+				<div class="user">
+					<span class="fw-bold">User: </span>
+					<span>Guest</span>
+				</div>
+			</div>
+		</footer>
 	</div>
 </body>
 </html>
